logs/django-scim2.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PlyPlus-0.7.5.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/django_scim'...
Listing './lib/python3.5/site-packages/django_scim/schemas'...
Listing './lib/python3.5/site-packages/django_scim/schemas/core'...
Listing './lib/python3.5/site-packages/django_scim/schemas/extension'...
Listing './lib/python3.5/site-packages/django_scim/tests'...
Listing './lib/python3.5/site-packages/django_scim2-0.2.25.egg-info'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/json.py'...
***   File "./lib/python3.5/site-packages/examples/json.py", line 44
    print '### JSON Parser using PlyPlus'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/permutations.py'...
***   File "./lib/python3.5/site-packages/examples/permutations.py", line 15
    print perm1.parse(' a c b').pretty()
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/plyplus'...
Listing './lib/python3.5/site-packages/plyplus/grammars'...
Listing './lib/python3.5/site-packages/plyplus/test'...
Compiling './lib/python3.5/site-packages/plyplus/test/python4ply-sample.py'...
***   File "./lib/python3.5/site-packages/plyplus/test/python4ply-sample.py", line 63
    0xDeadBeefCafeL
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plyplus/test/python_sample1.py'...
***   File "./lib/python3.5/site-packages/plyplus/test/python_sample1.py", line 6
    print fib(i),
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plyplus/test/python_sample2.py'...
***   File "./lib/python3.5/site-packages/plyplus/test/python_sample2.py", line 6
    print "Calculating Fib sequence, %d members" % N
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
